--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,10 +1,27 @@
-button
-{
-  margin-top: 20px;
-}
-
 .imagem
 {
-  height: 200px;
+  height: 400px;
   width: 100%;
+  background-image: url("no_image.png");
+  background-position: center;
+  background-size: cover;
+  background-color: white;
+}
+
+body
+{
+  background-color:ghostwhite;
+  color: white;
+}
+
+.nav-wrapper
+{
+  background-color: black;
+}
+
+.material-icons
+{
+   margin-left: 10px;
+   vertical-align: bottom;
+   font-size: 25px;
 }
